fixed active link on small width

--- a/projects/naukin/blog/blog_style.css
+++ b/projects/naukin/blog/blog_style.css
@@ -18,3 +18,11 @@ a:hover{
     color: #000000;
     border-bottom: 2px solid #492FE6;
 }
+
+@media(max-width: 991px){
+    .active,
+    .nav-link:hover {
+        color: #000000;
+        border-bottom: none;
+    }
+}
